--- a/internal/web/templates/pages/login.html
+++ b/internal/web/templates/pages/login.html
@@ -1,6 +1,6 @@
 {{template "auth.html" .}}
 
-{{define "content"}}
+{{define "login_content"}}
 <article class="auth-card">
     <header>
         <h2>Вход в систему</h2>
