--- a/internal/web/templates/pages/register.html
+++ b/internal/web/templates/pages/register.html
@@ -1,6 +1,6 @@
 {{template "auth.html" .}}
 
-{{define "content"}}
+{{define "register_content"}}
 <article class="auth-card">
     <header>
         <h2>Создание семейного аккаунта</h2>
