--- a/internal/web/templates/layouts/auth.html
+++ b/internal/web/templates/layouts/auth.html
@@ -38,6 +38,7 @@
                 {{end}}
                 
                 <!-- Auth Content -->
+                {{if .AuthType}}
                 {{template "register_content" .}}
                 {{else}}
                 <div class="alert alert-warning" role="alert">
