Revert "Add Playwright E2E test infrastructure and phase 1 auth tests"
This reverts commit 72d553d1b4f4e394bcb63b1ce5b75f0301b76c36.

--- a/internal/web/templates/layouts/auth.html
+++ b/internal/web/templates/layouts/auth.html
@@ -38,9 +38,7 @@
                 {{end}}
                 
                 <!-- Auth Content -->
-                {{if .IsLogin}}
-                {{template "login_content" .}}
-                {{else if .IsRegister}}
+                {{if .AuthType}}
                 {{template "register_content" .}}
                 {{else}}
                 <div class="alert alert-warning" role="alert">
